# aviutl2_sdk_rs

./: .gitignore  README.md
avi_reader_rs/: Cargo.toml  build.rs  input2.h
avi_reader_rs/src/: lib.rs
aviutl2_sdk/: AviReader.cpp  AviSaver.cpp  aviutl2_plugin_sdk.txt
